# api-server-rs

./: .dockerignore  Cargo.toml  README.md  dockerfile  env.sh
cfn/: cdk.context.json  cdk.json  config.ts  devConfig.ts  package-lock.json  package.json  run.sh
cfn/lib/: cfn-stack.ts
cfn/test/: cfn.test.ts
src/: config.rs  error_handler.rs  handler.rs  init.rs  main.rs
src/domain/: mod.rs
src/domain/model/: email.rs  error.rs  identity.rs  login.rs  mod.rs  user.rs
src/domain/repositories/: user_repository.rs
src/domain/service/: login_service.rs  mod.rs  user_service.rs
src/domain/traits/: id_generator.rs  jwt_handler.rs  mod.rs  time_keeper.rs  user_repository.rs
src/infra/: id_generator.rs  jwt_handler.rs  time_keeper.rs  user_repository.rs
src/libs/: http_status.rs  mod.rs
src/presenter/: user_response.rs
