[package]
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"
name = "api-server-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
chrono = "0.4"
dynomite = "*"
jsonwebtoken = "7"
rusoto_core = "0.45"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
tokio = {features = ["full"], version = "0.2"}
uuid = {version = "0.8", features = ["serde", "v4"]}
warp = "0.2"
