[package]
authors = ["irieryota <ryotairie123@gmail.com>"]
edition = "2018"
name = "api-server-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-trait = "*"
dynamodb = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.14-alpha", package = "aws-sdk-dynamodb" }
axum = "0.1.1"
chrono = "0.4"
hyper = {version = "0.14", features = ["full"]}
jsonwebtoken = "7"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
thiserror = "1.0"
tokio = {features = ["full"], version = "1"}
tower = "0.4"
tower-http = "*"
uuid = {version = "0.8", features = ["serde", "v4"]}
